--- a/stylesheets/indexes.css
+++ b/stylesheets/indexes.css
@@ -20,6 +20,7 @@ h1 {
 }
 
 h2 {
+  font-family: var(--font-third);
   font-size: var(--fs-400);
   margin-bottom: 30px;
   padding-bottom: 10px;
@@ -33,6 +34,7 @@ h2:not(:first-of-type) {
 h3 {
   margin-bottom: 10px;
   margin-top: 30px;
+  font-family: var(--font-third);
 }
 
 .third-cover {
@@ -128,8 +130,12 @@ h3 {
     font-size: var(--fs-250);
   }
 
+  h1.sinhala {
+    font-size: var(--fs-400);
+  }
+
   h3 {
-    font-size: var(--fs-300);
+    font-size: var(--fs-200);
   }
 
   .lesson-listing li a {
